--- a/src/tests/WriterModule/CMakeLists.txt
+++ b/src/tests/WriterModule/CMakeLists.txt
@@ -14,6 +14,7 @@ set(writer_module_SRC
     f144_WriterTests.cpp
     al00_WriterTests.cpp
     ep01_WriterTests.cpp
+    mdat_WriterTests.cpp
 )
 
 add_library(writer_module OBJECT ${writer_module_SRC})
