--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,7 +42,8 @@ build:
   script:
     - mkdir build
     - cd build
-    - $SCL cmake ..
+    - $SCL conan install --build missing ..
+    - $SCL cmake -DCONAN=MANUAL ..
     - $SCL make -j
   parallel:
     matrix:
@@ -57,4 +58,6 @@ build-release:
   image: registry.esss.lu.se/ecdc/ess-dmsc/docker-centos7-build-node:latest
   script:
     - mkdir build
-    - jenkins-scripts/configure-release.sh . build
+    - cd build
+    - scl enable devtoolset-11 -- conan install --build missing ..
+    - scl enable devtoolset-11 -- ../jenkins-scripts/configure-release.sh .. .
