--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,7 +50,7 @@ build:
   parallel:
     matrix:
       - DISTRIBUTION: centos7
-        SCL: scl enable devtoolset-11 --
+        SCL: scl enable devtoolset-11 rh-python38 --
       - DISTRIBUTION:
           - debian11
           - ubuntu2204
@@ -61,5 +61,5 @@ build-release:
   script:
     - mkdir build
     - cd build
-    - scl enable devtoolset-11 -- conan install --build missing ..
-    - scl enable devtoolset-11 -- ../jenkins-scripts/configure-release.sh .. .
+    - scl enable devtoolset-11 rh-python38 -- conan install --build missing ..
+    - scl enable devtoolset-11 rh-python38 -- ../jenkins-scripts/configure-release.sh .. .
