--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -94,3 +94,19 @@ build-and-test-release:
       - build/test-output.xml
     reports:
       junit: build/test-output.xml
+
+build-and-test-alt-distro:
+  extends: .build
+  image: registry.esss.lu.se/ecdc/ess-dmsc/docker-$DISTRO-build-node:latest
+  script:
+    - cmake -GNinja -DCMAKE_BUILD_TYPE=Debug -DCONAN=MANUAL -DRUN_DOXYGEN=ON -DCOV=ON ..
+    - $SCL ninja all UnitTests docs
+    - ./bin/UnitTests
+  parallel:
+    matrix:
+      - DISTRO:
+          - debian11
+          - ubuntu2204
+        SCL: ''
+      - DISTRO: almalinux8
+        SCL: scl enable gcc-toolset-12 --
