--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -93,6 +93,9 @@ build-and-test-release:
   artifacts:
     paths:
       - build/test-output.xml
+      - build/bin
+      - build/lib
+      - build/licenses
     reports:
       junit: build/test-output.xml
 
@@ -110,3 +113,22 @@ build-and-test-alt-distro:
           - ubuntu2204
       - DISTRO: almalinux8
         SCL: scl enable gcc-toolset-12 --
+
+archive:
+  stage: release
+  image: registry.esss.lu.se/ecdc/ess-dmsc/docker-centos7-build-node:latest
+  script:
+    - >
+      cd build
+      mkdir -p archive/kafka-to-nexus/bin
+      cp ./bin/kafka-to-nexus archive/kafka-to-nexus/bin/
+      cp -r ./lib archive/kafka-to-nexus/
+      cp -r ./licenses archive/kafka-to-nexus/
+      cp ./CONAN_INFO archive/kafka-to-nexus/
+      cd archive
+      tar czf kafka-to-nexus.tar.gz kafka-to-nexus
+  dependencies:
+    - build-and-test-release
+  artifacts:
+    paths:
+      - build/archive/kafka-to-nexus.tar.gz
