--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -129,7 +129,16 @@ centos-release-test:
   extends: .build
   image: registry.esss.lu.se/ecdc/ess-dmsc/docker-$DISTRO-build-node:latest
   script:
-    - $SCL cmake -GNinja -DCMAKE_BUILD_TYPE=Debug -DCONAN=MANUAL -DRUN_DOXYGEN=ON ..
+    - >
+      $SCL cmake \
+        -GNinja \
+        -DCMAKE_BUILD_TYPE=Debug \
+        -DCMAKE_SKIP_RPATH=FALSE \
+        -DCMAKE_INSTALL_RPATH='$ORIGIN/../lib' \
+        -DCMAKE_BUILD_WITH_INSTALL_RPATH=TRUE \
+        -DCONAN=MANUAL \
+        -DRUN_DOXYGEN=ON \
+        ..
     - $SCL ninja all UnitTests docs
   artifacts:
     paths:
