--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -134,7 +134,7 @@ centos-release-test:
         -GNinja \
         -DCMAKE_BUILD_TYPE=Debug \
         -DCMAKE_SKIP_RPATH=FALSE \
-        -DCMAKE_INSTALL_RPATH='$ORIGIN/../lib' \
+        -DCMAKE_INSTALL_RPATH='\$ORIGIN/../lib' \
         -DCMAKE_BUILD_WITH_INSTALL_RPATH=TRUE \
         -DCONAN=MANUAL \
         -DRUN_DOXYGEN=ON \
