--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,6 @@ default:
 stages:
   - static
   - build
-  - test
   - release
 
 .static:
@@ -42,8 +41,8 @@ cppcheck:
 .build:
   stage: build
   before_script:
-    - mkdir $CI_JOB_NAME
-    - cd $CI_JOB_NAME
+    - mkdir build
+    - cd build
     - >
       conan remote add \
         --insert 0 \
@@ -64,7 +63,7 @@ cppcheck:
     # Store built packages to save build time on subsequent builds
     - conan upload '*' --all --confirm --remote ecdc-conan-external
 
-centos-debug-build:
+build-and-test-debug:
   extends: .build
   image: registry.esss.lu.se/ecdc/ess-dmsc/docker-centos7-build-node:latest
   variables:
@@ -72,30 +71,18 @@ centos-debug-build:
   script:
     - $SCL cmake -GNinja -DCMAKE_BUILD_TYPE=Debug -DCONAN=MANUAL -DRUN_DOXYGEN=ON -DCOV=ON ..
     - $SCL ninja all UnitTests docs
-  artifacts:
-    paths:
-      - $CI_JOB_NAME/
-
-centos-debug-test:
-  stage: test
-  needs: ["centos-debug-build"]
-  image: registry.esss.lu.se/ecdc/ess-dmsc/docker-centos7-build-node:latest
-  script:
-    - cd centos-debug-build
-    - ninja coverage
+    - $SCL ninja coverage
     - cat coverage.txt
   coverage: '/^TOTAL.*\s+(\d+\%)$/'
-  dependencies:
-    - centos-debug-build
   artifacts:
     paths:
-      - centos-debug-build/coverage.xml
+      - build/coverage.xml
     reports:
       coverage_report:
         coverage_format: cobertura
-        path: centos-debug-build/coverage.xml
+        path: build/coverage.xml
 
-centos-release-build:
+build-and-test-release:
   extends: .build
   image: registry.esss.lu.se/ecdc/ess-dmsc/docker-centos7-build-node:latest
   variables:
@@ -103,105 +90,37 @@ centos-release-build:
   script:
     - $SCL ../ci/configure-release.sh .. .
     - $SCL ninja all UnitTests docs
+    - ./bin/UnitTests --gtest_output=xml:test-output.xml
   artifacts:
     paths:
-      - $CI_JOB_NAME/CONAN_INFO
-      - $CI_JOB_NAME/bin
-      - $CI_JOB_NAME/lib
-      - $CI_JOB_NAME/licenses
-
-centos-release-test:
-  stage: test
-  needs: ["centos-release-build"]
-  image: registry.esss.lu.se/ecdc/ess-dmsc/docker-centos7-build-node:latest
-  script:
-    - cd centos-release-build
-    - ./build/bin/UnitTests --gtest_output=xml:test-output.xml
-  dependencies:
-    - centos-release-build
-  artifacts:
-    paths:
-      - centos-release-build/test-output.xml
+      - build/CONAN_INFO
+      - build/test-output.xml
+      - build/bin
+      - build/lib
+      - build/licenses
     reports:
-      junit: centos-release-build/test-output.xml
+      junit: build/test-output.xml
 
-.alt-distro-build:
+build-and-test-alt-distro:
   extends: .build
   image: registry.esss.lu.se/ecdc/ess-dmsc/docker-$DISTRO-build-node:latest
   script:
-    - >
-      $SCL cmake \
-        -GNinja \
-        -DCMAKE_BUILD_TYPE=Debug \
-        -DCMAKE_SKIP_RPATH=FALSE \
-        -DCMAKE_INSTALL_RPATH='\$ORIGIN/../lib' \
-        -DCMAKE_BUILD_WITH_INSTALL_RPATH=TRUE \
-        -DCONAN=MANUAL \
-        -DRUN_DOXYGEN=ON \
-        ..
+    - $SCL cmake -GNinja -DCMAKE_BUILD_TYPE=Debug -DCONAN=MANUAL -DRUN_DOXYGEN=ON ..
     - $SCL ninja all UnitTests docs
-  artifacts:
-    paths:
-      - $CI_JOB_NAME/
-
-almalinux-build:
-  extends: .alt-distro-build
-  variables:
-    DISTRO: almalinux8
-    SCL:  scl enable gcc-toolset-12 --
-
-debian-build:
-  extends: .alt-distro-build
-  variables:
-    DISTRO: debian11
-
-ubuntu-build:
-  extends: .alt-distro-build
-  variables:
-    DISTRO: ubuntu2204
-
-.alt-distro-test:
-  stage: test
-  image: registry.esss.lu.se/ecdc/ess-dmsc/docker-$DISTRO-build-node:latest
-
-almalinux-test:
-  extends: .alt-distro-test
-  needs: ["almalinux-build"]
-  variables:
-    DISTRO: almalinux8
-  script:
-    - cd almalinux-build
     - ./bin/UnitTests
-  dependencies:
-    - almalinux-build
-
-debian-test:
-  extends: .alt-distro-test
-  needs: ["debian-build"]
-  variables:
-    DISTRO: debian11
-  script:
-    - cd debian-build
-    - ./bin/UnitTests
-  dependencies:
-    - debian-build
-
-ubuntu-test:
-  extends: .alt-distro-test
-  needs: ["ubuntu-build"]
-  variables:
-    DISTRO: ubuntu2204
-  script:
-    - cd ubuntu-build
-    - ./bin/UnitTests
-  dependencies:
-    - ubuntu-build
+  parallel:
+    matrix:
+      - DISTRO:
+          - debian11
+          - ubuntu2204
+      - DISTRO: almalinux8
+        SCL: scl enable gcc-toolset-12 --
 
 archive:
   stage: release
   image: registry.esss.lu.se/ecdc/ess-dmsc/docker-centos7-build-node:latest
   script:
-    - cd centos-release-build
+    - cd build
     - mkdir -p archive/kafka-to-nexus/bin
     - cp ./bin/kafka-to-nexus archive/kafka-to-nexus/bin/
     - cp -r ./lib archive/kafka-to-nexus/
@@ -210,7 +129,7 @@ archive:
     - cd archive
     - tar czf kafka-to-nexus.tar.gz kafka-to-nexus
   dependencies:
-    - centos-release-build
+    - build-and-test-release
   artifacts:
     paths:
-      - centos-release-build/archive/kafka-to-nexus.tar.gz
+      - build/archive/kafka-to-nexus.tar.gz
