--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -138,9 +138,11 @@ archive:
 
 keep-artifacts:
   stage: release
-  image: registry.esss.lu.se/ecdc/ess-dmsc/docker-centos7-build-node:latest
   rules:
     - if: $CI_COMMIT_TAG
+  image: registry.esss.lu.se/ecdc/ess-dmsc/docker-centos7-build-node:latest
+  script:
+    - echo "Commit is tagged, keeping artefacts."
   dependencies:
     - archive
   artifacts:
