--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -123,7 +123,7 @@ build-alt-distro:
       - DISTRO: almalinux8
         SCL: scl enable gcc-toolset-12 --
 
-archive:
+archive-artifacts:
   stage: release
   image: registry.esss.lu.se/ecdc/ess-dmsc/docker-centos7-build-node:latest
   script:
@@ -143,12 +143,14 @@ archive:
 
 keep-artifacts:
   stage: release
-  rules:
-    - if: $CI_COMMIT_TAG
   image: registry.esss.lu.se/ecdc/ess-dmsc/docker-centos7-build-node:latest
   script:
     - echo "Commit is tagged, keeping artefacts."
+  dependencies:
+    - archive-artifacts
   artifacts:
     paths:
       - build/archive/kafka-to-nexus.tar.gz
     expire_in: never
+  rules:
+    - if: $CI_COMMIT_TAG
