--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -123,7 +123,7 @@ build-alt-distro:
       - DISTRO: almalinux8
         SCL: scl enable gcc-toolset-12 --
 
-archive-artifacts:
+archive:
   stage: release
   image: registry.esss.lu.se/ecdc/ess-dmsc/docker-centos7-build-node:latest
   script:
@@ -145,9 +145,9 @@ keep-artifacts:
   stage: release
   image: registry.esss.lu.se/ecdc/ess-dmsc/docker-centos7-build-node:latest
   script:
-    - echo "Commit is tagged, keeping artefacts."
+    - ls build/archive
   dependencies:
-    - archive-artifacts
+    - archive
   artifacts:
     paths:
       - build/archive/kafka-to-nexus.tar.gz
