--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -145,7 +145,9 @@ keep-artifacts:
   stage: release
   image: registry.esss.lu.se/ecdc/ess-dmsc/docker-centos7-build-node:latest
   script:
-    - ls build/archive
+    - pwd
+    - ls
+    - ls *
   dependencies:
     - archive
   artifacts:
