--- a/integration-tests/docker-compose.yml
+++ b/integration-tests/docker-compose.yml
@@ -31,6 +31,12 @@ services:
       KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9092,OUTSIDE://kafka:9093
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
+    healthcheck:
+      test: ["kafka-topics", "--bootstrap-server", "localhost:9092", "--list"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
 
   zookeeper:
     container_name: zookeeper
