Add condition to healthcheck

--- a/integration-tests/docker-compose.yml
+++ b/integration-tests/docker-compose.yml
@@ -57,7 +57,8 @@ services:
     container_name: filewriter
     image: registry.esss.lu.se/ecdc/ess-dmsc/docker-centos7-build-node:latest
     depends_on:
-      - kafka
+      kafka:
+        condition: service_healthy
     tty: true
     networks:
       - frontend
