--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,7 @@ stages:
   - check
   - build
   - archive
+  - integration
   - release
 
 .check:
@@ -141,6 +142,26 @@ archive:
   artifacts:
     paths:
       - build/archive/kafka-to-nexus.tar.gz
+
+integration-tests:
+  stage: integration
+  image: docker:latest
+  before_script:
+    - cd integration-tests
+    - ./setup.sh
+  script:
+    - ./run-integration-tests.sh
+  after_script:
+    - cd integration-tests
+    - ./teardown.sh
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+  artifacts:
+    paths:
+      - integration-tests/IntegrationTestsOutput.xml
+      - integration-tests/logs/*
+    reports:
+      junit: integration-tests/IntegrationTestsOutput.xml
 
 keep-artifacts:
   stage: release
