--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -172,7 +172,7 @@ keep-artifacts:
     - archive
   artifacts:
     paths:
-      - kafka-to-nexus.tar.gz
+      - build/archive/kafka-to-nexus.tar.gz
     expire_in: never
   rules:
     - if: $CI_COMMIT_TAG
