--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -148,7 +148,7 @@ integration-tests:
   image: docker:latest
   before_script:
     - cd integration-tests
-    - ./setup.sh
+    - ./setup.sh ../build/archive/kafka-to-nexus.tar.gz
   script:
     - ./run-integration-tests.sh
   after_script:
@@ -156,6 +156,8 @@ integration-tests:
     - ./teardown.sh
   rules:
     - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+  dependencies:
+    - archive
   artifacts:
     paths:
       - integration-tests/IntegrationTestsOutput.xml
