CI: Keep integration tests artifacts on failure

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -159,6 +159,7 @@ integration-tests:
   dependencies:
     - archive
   artifacts:
+    when: always
     paths:
       - integration-tests/IntegrationTestsOutput.xml
       - integration-tests/logs/*
