CI: Keep Nexus artifacts from integration tests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -163,6 +163,7 @@ integration-tests:
     paths:
       - integration-tests/IntegrationTestsOutput.xml
       - integration-tests/logs/*
+      - integration-tests/output-files/*
     reports:
       junit: integration-tests/IntegrationTestsOutput.xml
 
