Tests: Add signal handling tests for main function

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -51,6 +51,7 @@ set(UnitTests_SRC
         MetaData/ValueTest.cpp
         JobCreatorTests.cpp
         HDFFileTest.cpp
+        KafkaToNexusTests.cpp
         MasterTests.cpp)
 
 set(UnitTests_INC
