[Add] da00 DataArray writer module and tests

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,7 +14,23 @@ if (NOT flatbuffers_FOUND)
 endif()
 find_package(fmt REQUIRED)
 find_package(h5cpp REQUIRED)
+option(STREAMING_DATA_TYPES "Path to streaming-data-types" "")
+message(STATUS "Does ${STREAMING_DATA_TYPES}/schemas exist?")
+if (EXISTS "${STREAMING_DATA_TYPES}/schemas")
+    message(STATUS "Found streaming-data-types, using it.")
+    file(GLOB fb_schemata_files "${STREAMING_DATA_TYPES}/schemas/*.fbs")
+    set(fb_header_INC "${PROJECT_BINARY_DIR}/schemas")
+    find_program(flatc flatc PATHS "$ENV{flatc}" "$ENV{HOME}/.tools" "/opt/local/flatbuffers")
+    message(STATUS "Using flatc compiler ${flatc}")
+    foreach (fb_file ${fb_schemata_files})
+        message(STATUS "Generating header file for ${fb_file}.")
+        execute_process(COMMAND ${flatc} --cpp --gen-mutable --gen-name-strings --scoped-enums -o ${fb_header_INC} ${fb_file})
+    endforeach()
+    include_directories(${fb_header_INC})
+else()
+  message(STATUS "No streaming-data-types found, using bundled version.")
 find_package(streaming-data-types)
+endif()
 find_package(date REQUIRED)
 find_package(asio REQUIRED)
 find_package(graylog-logger REQUIRED)
