--- a/src/WriterModule/da00/CMakeLists.txt
+++ b/src/WriterModule/da00/CMakeLists.txt
@@ -8,6 +8,7 @@ set(da00_INC
         "da00_Type.h"
         "da00_Edge.h"
         "da00_Variable.h"
+        "da00_Attribute.h"
 )
 
 create_writer_module(da00)
